--- a/index.html
+++ b/index.html
@@ -3,8 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>Struttura WP</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    
+    <div class="container">
+      <!-- header -->
+      <header>
+
+      </header>
+      <!-- /header -->
+
+      <!-- main -->
+      <main>
+
+        <!-- colonna sinistra -->
+        <div class="column-left">
+
+        </div>
+
+        <!-- parte centrale -->
+        <div class="column-center">
+
+        </div>
+
+        <!-- colonna destra -->
+        <div class="column-right">
+          <section class="section-top">
+
+          </section>
+          <section class="section-bottom">
+
+          </section>
+        </div>
+        
+      </main>
+      <!-- /main -->
+
+      <!-- footer -->
+      <footer>
+
+      </footer>
+      <!-- /footer -->
+    </div>
+
   </body>
 </html>
