Commit es. struttura WP Milestone 1

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
         <!-- colonna destra -->
         <div class="column-right">
-          <section class="section-top">
+          <section class="section">
 
           </section>
-          <section class="section-bottom">
+          <section class="section">
 
           </section>
         </div>
-        
+
       </main>
       <!-- /main -->
 
